--- a/csscode.css
+++ b/csscode.css
@@ -92,7 +92,7 @@ button:focus {
 	color: #EF3B3A;
 }
 body {
-	background: #76b852; /* fallback for old
+	background: #ffffff; /* fallback for old
 browsers */
 	background: -webkit-linear-gradient(right,
 #76b852, #8DC26F);
@@ -100,8 +100,8 @@ browsers */
 #76b852, #8DC26F);
 	background: -o-linear-gradient(right,
 #76b852, #8DC26F);
-	background: linear-gradient(to left, #76b852,
-#8DC26F);
+	background: linear-gradient(to left, #91ad66,
+#91ad66);
 	font-family: "Roboto", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
